--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
             <li><a href="https://www.paypal.me/alexserver">DONATE</a></li>
         </ul>   
         </div>
+        <right>
         <iframe src="https://discord.com/widget?id=785543836608364556&theme=dark" 
         width="350" height="500" allowtransparency="true" frameborder="0"
-         sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+         sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe></right>
 </body>
 </html>
