added meta tags

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
-    <title>Landing Page Template</title>
+    <meta name="description" content="Official alex server website" />
+    <link rel="icon" href="assets/img/logo.png" type="image/png">
+    
+    <meta name="og:image" content="assets/img/logo.png">
+    <meta name="og:title" content="Official alex server website"/>
+    <meta name="og:description" content= "Official alex server website">
+    <title>Alex mindustry official website</title>
     <!-- BOOTSTRAP CORE STYLE CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
     <!-- FONT AWESOME CSS -->
