--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -121,8 +121,7 @@
                             <div class="media-body">
                                 <h4 class="media-heading"><strong> Hex pvp </strong></h4>
                                 <p>
-                                    Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc. 
-                                Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc.
+                                    A type of pvp wherein players spawn in hexes and have an ability to capture other hex
                                 </p>
 
                             </div>
@@ -137,8 +136,7 @@
                             <div class="media-body">
                                 <h4 class="media-heading"><strong> Turbo pvp </strong></h4>
                                 <p>
-                                    Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc. 
-                                Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc.
+                                    A special pvp wherein someblocks are overpowered(OP)
                                 </p>
 
                             </div>
@@ -152,8 +150,7 @@
                         <i class=" fa fa-database fa-5x "></i>
                    <h4 ><strong> PVP </strong></h4>
                   <p>
-                      Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc. 
-                                Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc.
+                      Classic pvp
                   </p>
                     </div>
                
@@ -161,16 +158,14 @@
                         <i class=" fa fa-send fa-5x "></i>
                    <h4 ><strong> Survival </strong></h4>
                   <p>
-                      Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc. 
-                                Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc.
+                      Survive the most waves every  wave grows HARDER AND HARDER
                   </p>
                     </div>
                      <div class="col-lg-4 col-md-4 col-sm-4" data-scroll-reveal="enter from the bottom after 1.4s" >
                         <i class=" fa fa-puzzle-piece fa-5x "></i>
                           <h4 ><strong> Attack </strong></h4>
                   <p>
-                      Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc. 
-                                Aenean faucibus luctus enim. Duis quis sem risu suspend lacinia elementum nunc.
+                      Just attacking enemy base no enemy to come to attack you
                   </p>
                     </div>
             </div>
