update paypal link

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -54,7 +54,7 @@
                      <li><a href="#features">GAMEMODES</a></li>
                     <li><a href="#developers">ADMINS</a></li>
                     <li ><a href="#EXP">LEADERBOARD</a></li>
-                     <li><a href="https://www.paypal.me/alexserver">DONATE</a></li>
+                     <li><a href="https://www.paypal.me/AlexServers">DONATE</a></li>
                      <li><a href="https://discord.gg/zne9M3qEbT">DISCORD</a></li>
                      <li><a href="https://www.youtube.com/channel/UC0ZqV4fOjfpr4xtmpHAK3zA">YOUTUBE</a></li>
                      <li><a href="https://mail.google.com/mail/u/0/" target="_top"> <i class="fa fa-envelope-o"></i><span class="home-mail">e-mail: alex.mindustry@gmail.com</span></a></li>
